--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,26 @@
-cat <<EOF > .gitignore
-# Terraform local state and plugins
+# Local .terraform folder (contains provider binaries and modules)
 .terraform/
-*.tfstate
-*.tfstate.backup
-.terraform.lock.hcl
 
-# Sensitive variables (if you ever use them)
+# Terraform State files (These contain sensitive data about your infra)
+*.tfstate
+*.tfstate.*
+
+# Crash log files
+crash.log
+
+# Terraform local variables (Where you keep your email and secrets)
 *.tfvars
 *.tfvars.json
 
-# Operating system files
-.DS_Store
-Thumbs.db
-EOF
+# Local environment files
+.env
+
+# Ignore override files
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Ignore CLI configuration files
+.terraformrc
+terraform.rc
